--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -311,12 +311,32 @@ html.transition *:after {
 }
 
 /*! Style project description boxes */
+#projects h3 {
+  margin-top: 10vh;
+}
+
 .project-desc {
   background-color: var(--color-accent);
   padding: 2vh;
   color: #FFFFFF;
   width: 50%;
+  flex-wrap: wrap;
   z-index: 1;
+}
+
+.project-img {
+  height: auto;
+  max-width: 30%;
+  float: right;
+  z-index: -1;
+  padding-left: 20vw;
+  padding-bottom: 8vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.project-block {
+  max-height: 80vh;
 }
 
 /* Footer styling */
